docs: Diataxis refactor batch 2 — explanation, how-to, reference, tutorials (v2.6.0)
Agent output: explanation, how-to, reference, and tutorial sections updated.
- docs/explanation/: 80-20-design-patterns, documentation-philosophy,
  how-doctester-works, java25-design-philosophy rewritten for v2.6.0
- docs/how-to/: MIGRATION_2.4_to_2.5, advanced-rendering-formats,
  benchmarking, control-documentation, grpc-unary updated
- docs/reference/: http-constants, realtime-protocols-reference, request-api,
  response-api, sse-reference, testbrowser-api, url-builder,
  websockets-reference rewritten for new APIs
- docs/tutorials/: grpc-streaming, server-sent-events, virtual-threads,
  websockets-realtime redirected to v2.6.0 capabilities

https://claude.ai/code/session_01Y8LUibcaDGLj74zvcefk1A