@@ -1,163 +1,143 @@
-# How-to: Make Unary RPC Calls
+# How-To: Verify Interface Contracts with sayContractVerification
 
-Test simple request/response gRPC calls.
+Document that all implementations of an interface fulfill its contract using DTR 2.6.0's `sayContractVerification` method.
 
----
-
-## Create Channel
-
-```java
-ManagedChannel channel = ManagedChannelBuilder
-    .forAddress("localhost", 50051)
-    .usePlaintext()
-    .build();
-
-// Don't forget to shutdown
-channel.shutdown();
-```
+**DTR Version:** 2.6.0 | **Java:** 25+ with `--enable-preview`
 
 ---
 
-## Create Stub
+## What sayContractVerification Does
 
-```java
-// Synchronous (blocking)
-MyServiceGrpc.MyServiceBlockingStub stub =
-    MyServiceGrpc.newBlockingStub(channel);
+`sayContractVerification(Class<?> contract, Class<?>... impls)` uses reflection to:
+1. Enumerate all methods declared by the contract interface
+2. Check that each implementation provides non-default implementations
+3. Generate a coverage matrix table in the documentation
 
-// Asynchronous (non-blocking)
-MyServiceGrpc.MyServiceStub asyncStub =
-    MyServiceGrpc.newStub(channel);
-
-// Futures (for CompletableFuture-style)
-MyServiceGrpc.MyServiceFutureStub futureStub =
-    MyServiceGrpc.newFutureStub(channel);
-```
+This replaces gRPC-specific testing guides, which relied on the removed HTTP stack. Contract verification is applicable to any interface — service layers, repositories, adapters.
 
 ---
 
-## Make a Call
+## Basic Example
 
 ```java
-// Build request
-MyRequest request = MyRequest.newBuilder()
-    .setUserId(42)
-    .setName("alice")
-    .build();
+import io.github.seanchatmangpt.dtr.core.DtrContext;
+import io.github.seanchatmangpt.dtr.core.DtrExtension;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
-// Blocking call
-MyResponse response = stub.getUser(request);
+@ExtendWith(DtrExtension.class)
+class UserServiceContractDocTest {
 
-System.out.println(response.getId());
-System.out.println(response.getEmail());
-```
+    // Define the contract
+    interface UserService {
+        User findById(long id);
+        User create(String name, String email);
+        void update(long id, String name);
+        void delete(long id);
+        java.util.List<User> findAll();
+    }
 
----
+    record User(long id, String name, String email) {}
 
-## Handle Errors
+    // Production implementation
+    static class UserServiceImpl implements UserService {
+        public User findById(long id) { return new User(id, "alice", "alice@example.com"); }
+        public User create(String name, String email) { return new User(1L, name, email); }
+        public void update(long id, String name) { /* update logic */ }
+        public void delete(long id) { /* delete logic */ }
+        public java.util.List<User> findAll() { return java.util.List.of(); }
+    }
 
-```java
-try {
-    MyResponse response = stub.getUser(request);
-} catch (io.grpc.StatusRuntimeException e) {
-    io.grpc.Status status = e.getStatus();
-    System.out.println("Code: " + status.getCode());
-    System.out.println("Message: " + status.getDescription());
+    // Stub implementation for tests
+    static class UserServiceStub implements UserService {
+        public User findById(long id) { return new User(id, "stub", "stub@example.com"); }
+        public User create(String name, String email) { return new User(99L, name, email); }
+        public void update(long id, String name) { /* no-op */ }
+        public void delete(long id) { /* no-op */ }
+        public java.util.List<User> findAll() { return java.util.List.of(new User(1L, "stub", "stub@example.com")); }
+    }
 
-    switch (status.getCode()) {
-        case NOT_FOUND:
-            System.out.println("User not found");
-            break;
-        case INVALID_ARGUMENT:
-            System.out.println("Invalid request");
-            break;
-        case UNAVAILABLE:
-            System.out.println("Service unavailable");
-            break;
-        default:
-            System.out.println("Other error");
+    @Test
+    void verifyUserServiceContract(DtrContext ctx) {
+        ctx.sayNextSection("UserService Contract Verification");
+        ctx.say("All implementations of UserService must fulfill the following contract:");
+
+        ctx.sayContractVerification(
+            UserService.class,
+            UserServiceImpl.class,
+            UserServiceStub.class
+        );
+
+        ctx.sayNote("The coverage matrix shows which methods each implementation provides.");
     }
 }
 ```
 
 ---
 
-## Timeout
+## Document the Contract with sayCallGraph
+
+Use `sayCallGraph` to visualize how an implementation class's methods call each other:
 
 ```java
-// Add timeout
-stub = stub.withDeadlineAfter(5, java.util.concurrent.TimeUnit.SECONDS);
+@Test
+void documentCallGraph(DtrContext ctx) {
+    ctx.sayNextSection("UserServiceImpl Call Graph");
+    ctx.say("The following Mermaid diagram shows the internal call structure " +
+            "of UserServiceImpl:");
 
-MyResponse response = stub.getUser(request);
-```
-
----
-
-## Retry with Exponential Backoff
-
-```java
-MyResponse callWithRetry(MyServiceGrpc.MyServiceBlockingStub stub,
-                          MyRequest request,
-                          int maxRetries) {
-    for (int attempt = 1; attempt <= maxRetries; attempt++) {
-        try {
-            return stub.getUser(request);
-        } catch (io.grpc.StatusRuntimeException e) {
-            if (attempt == maxRetries) throw e;
-            if (!isRetryable(e.getStatus().getCode())) throw e;
-
-            long delayMs = (long) Math.pow(2, attempt - 1) * 100;
-            Thread.sleep(delayMs);
-        }
-    }
-    throw new IllegalStateException("Should not reach here");
-}
-
-boolean isRetryable(io.grpc.Status.Code code) {
-    return code == io.grpc.Status.Code.UNAVAILABLE ||
-           code == io.grpc.Status.Code.DEADLINE_EXCEEDED;
+    ctx.sayCallGraph(UserServiceImpl.class);
 }
 ```
 
 ---
 
-## Concurrent Calls with Virtual Threads
+## Document a Sealed Result Type
+
+Contract verification often involves sealed result types. Document them too:
 
 ```java
-try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-    List<Future<MyResponse>> futures = new ArrayList<>();
+sealed interface ServiceResult<T> {
+    record Success<T>(T value) implements ServiceResult<T> {}
+    record NotFound(long id) implements ServiceResult<Object> {}
+    record ValidationError(String field, String message) implements ServiceResult<Object> {}
+}
 
-    for (int i = 1; i <= 100; i++) {
-        final int id = i;
-        futures.add(executor.submit(() -> {
-            MyRequest req = MyRequest.newBuilder().setUserId(id).build();
-            return stub.getUser(req);
-        }));
-    }
+@Test
+void documentResultTypes(DtrContext ctx) {
+    ctx.sayNextSection("Service Result Types");
+    ctx.say("Service methods return a sealed ServiceResult type. " +
+            "Callers must handle all cases exhaustively:");
 
-    // Collect results
-    for (Future<MyResponse> future : futures) {
-        MyResponse response = future.get();
-        // Process response
-    }
+    ctx.sayCode("""
+        ServiceResult<User> result = userService.findById(42);
+        String output = switch (result) {
+            case ServiceResult.Success<User>(User u) -> "Found: " + u.name();
+            case ServiceResult.NotFound(long id) -> "User " + id + " not found";
+            case ServiceResult.ValidationError(String f, String m) -> f + ": " + m;
+        };
+        """, "java");
+
+    ctx.sayNote("Using sealed types with pattern matching ensures all error cases " +
+                "are handled at compile time.");
 }
 ```
 
 ---
 
-## Validate Response
+## Verify Multiple Contracts
 
 ```java
-MyResponse response = stub.getUser(request);
+@Test
+void verifyAllContracts(DtrContext ctx) {
+    ctx.sayNextSection("Service Layer Contract Coverage");
+    ctx.say("Verifying all service implementations against their contracts:");
 
-// Check fields
-assert response.getId() == 42;
-assert response.getEmail().equals("alice@example.com");
-assert !response.getEmail().isEmpty();
+    ctx.sayContractVerification(UserService.class, UserServiceImpl.class, UserServiceStub.class);
+    ctx.sayContractVerification(OrderService.class, OrderServiceImpl.class);
+    ctx.sayContractVerification(ProductService.class, ProductServiceImpl.class, ProductServiceMock.class);
 
-// Check nested fields
-if (response.hasProfile()) {
-    assert response.getProfile().getAge() > 0;
+    ctx.sayNote("Implementations marked MISSING are incomplete and must be fixed before release.");
 }
 ```
 
@@ -165,23 +145,18 @@ if (response.hasProfile()) {
 
 ## Best Practices
 
-✅ **DO:**
-- Always shutdown channels
-- Handle StatusRuntimeException
-- Use timeouts
-- Implement retry for transient failures
-- Use blocking stub for tests
+**Define contracts as interfaces.** Even if you only have one implementation, an interface makes the contract explicit and testable.
 
-❌ **DON'T:**
-- Leave channels open
-- Retry on non-idempotent calls without care
-- Assume immediate failure (use timeouts)
+**Include stubs and mocks.** Verify that test doubles implement the full contract — partial stubs can hide missing behaviors.
+
+**Combine with sayCallGraph.** After verifying the contract is fully implemented, visualize the internal call structure for maintainers.
+
+**Use sealed result types.** Pattern match on `sealed interface` results instead of throwing exceptions — exhaustive switches catch missing cases at compile time.
 
 ---
 
 ## See Also
 
-- [How-to: Handle gRPC Streaming](grpc-streaming.md)
-- [How-to: Test gRPC Error Codes](grpc-error-handling.md)
-- [Tutorial: gRPC Streaming](../tutorials/grpc-streaming.md)
-- [Reference: gRPC Testing](../reference/grpc-reference.md)
+- [Document Call Graphs](grpc-streaming.md) — sayCallGraph details
+- [Document Coverage Matrix](grpc-error-handling.md) — sayDocCoverage for broader coverage reporting
+- [Pattern Matching with Sealed Records](pattern-matching.md) — Exhaustive type handling
